--- a/sar/Makefile
+++ b/sar/Makefile
@@ -1,3 +1,5 @@
+CFLAGS := -Werror=return-type
+
 all:
-	gcc sar.c
+	gcc sar.c -I.. -g $(CFLAGS)
 	./a.out /usr/lib/gcc/x86_64-linux-gnu/11/../../../i386-linux-gnu/libc.a
