add extraction ability to sar, flatten the .a to .o files and put all flattened .o files onto ld command

--- a/sar/Makefile
+++ b/sar/Makefile
@@ -1,5 +1,17 @@
 CFLAGS := -Werror=return-type
 
-all:
+all: libc
+
+build_sar:
 	gcc sar.c -I.. -g $(CFLAGS)
+
+libc: build_sar
+	# ./a.out /usr/lib/gcc/x86_64-linux-gnu/11/../../../i386-linux-gnu/libc.a fpioconst.o 
 	./a.out /usr/lib/gcc/x86_64-linux-gnu/11/../../../i386-linux-gnu/libc.a
+
+# TODO: parse fail
+libgcc: build_sar
+	./a.out /usr/lib/gcc/x86_64-linux-gnu/11/32/libgcc.a
+
+libgcc_eh: build_sar
+	./a.out /usr/lib/gcc/x86_64-linux-gnu/11/32/libgcc_eh.a
