--- a/sar/Makefile
+++ b/sar/Makefile
@@ -6,8 +6,8 @@ build_sar:
 	gcc sar.c -I.. -g $(CFLAGS)
 
 libc: build_sar
-	# ./a.out /usr/lib/gcc/x86_64-linux-gnu/11/../../../i386-linux-gnu/libc.a fpioconst.o 
-	./a.out /usr/lib/gcc/x86_64-linux-gnu/11/../../../i386-linux-gnu/libc.a
+	./a.out /usr/lib/gcc/x86_64-linux-gnu/11/../../../i386-linux-gnu/libc.a -v printf.o
+	# ./a.out /usr/lib/gcc/x86_64-linux-gnu/11/../../../i386-linux-gnu/libc.a
 
 # TODO: parse fail
 libgcc: build_sar
