refactor elfmem to store the list of provided and needed symbols

--- a/sar/Makefile
+++ b/sar/Makefile
@@ -3,11 +3,12 @@ CFLAGS := -Werror=return-type
 all: libc
 
 build_sar:
-	gcc sar.c -I.. -g $(CFLAGS)
+	gcc sar.c elf_member.c -I.. -g $(CFLAGS)
 
 libc: build_sar
-	./a.out /usr/lib/gcc/x86_64-linux-gnu/11/../../../i386-linux-gnu/libc.a -v
-	# ./a.out /usr/lib/gcc/x86_64-linux-gnu/11/../../../i386-linux-gnu/libc.a -v printf.o
+	# ./a.out /usr/lib/gcc/x86_64-linux-gnu/11/../../../i386-linux-gnu/libc.a -s printf
+	# ./a.out /usr/lib/gcc/x86_64-linux-gnu/11/../../../i386-linux-gnu/libc.a -v
+	./a.out /usr/lib/gcc/x86_64-linux-gnu/11/../../../i386-linux-gnu/libc.a -v printf.o
 	# ./a.out /usr/lib/gcc/x86_64-linux-gnu/11/../../../i386-linux-gnu/libc.a
 
 # TODO: parse fail
