--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,4 +2,7 @@ CFLAGS := -I..
 
 all:
 	gcc -m32 test_elf_writer.c $(CFLAGS)
-	./a.out
+	rm /tmp/manual.elf
+	./a.out || true
+	chmod a+x /tmp/manual.elf
+	/tmp/manual.elf
