run the elf generated in test_elf_writer.c in child process

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,6 +3,4 @@ CFLAGS := -I..
 all:
 	gcc -m32 test_elf_writer.c $(CFLAGS)
 	rm /tmp/manual.elf
-	./a.out || true
-	chmod a+x /tmp/manual.elf
-	/tmp/manual.elf
+	./a.out
