write the elf executable
slk finally works to link the sum app!

--- a/slibc/Makefile
+++ b/slibc/Makefile
@@ -2,7 +2,7 @@ SLIBC_SRC := $(wildcard *.c)
 SLIBC_OBJ := $(patsubst %.c,out/%.o,$(SLIBC_SRC))
 
 # -fno-pic to avoid generating relocation for GOT/PLT
-CFLAGS := -m32 -Werror -Wall -fno-pic
+CFLAGS := -m32 -Werror -Wall -fno-pic -g
 
 slibc.a: $(SLIBC_OBJ)
 	ar r slibc.a $(SLIBC_OBJ)
