make old/sar work again
Next step is to refactor the code and move the code out of old/

--- a/old/sar/Makefile
+++ b/old/sar/Makefile
@@ -1,9 +1,9 @@
 CFLAGS := -Werror
 
-all: libgcc
+all: libc
 
 build_sar:
-	gcc sar.c elf_member.c -I.. -g $(CFLAGS)
+	gcc sar.c elf_member.c -I.. -I../../third_party/scom/include -g $(CFLAGS) -m32
 
 libc: build_sar
 	# libgcc needs writev,syscall,__errno_location,sigemptyset,sigfillset,sigdelset,__fprintf_chk
